# py2py3-example

./: .gitignore  CONTRIBUTING  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
src/py23client/: __init__.py
tests/py27/: __init__.py
tests/py27/unit/: test___init__.py
tests/py310/: __init__.py
tests/py310/unit/: test___init__.py
